# uniswap-v3-event-streamer

./: .env.example  .env_example  LICENSE  Makefile  README.md  main.py  pyproject.toml  uniswap_v3_events.dump
checkpoints/: uni-v3-event-streamer-block-state.csv
devops/: Dockerfile  docker-compose.yaml  prometheus.yml
devops/grafana-dashboards/dashboards/: kafka-dashboard.json
devops/grafana-dashboards/provisioning/: providers.yml
src/: __init__.py  event_streamer_abc.py
src/core/: __init__.py  event_streamer_abc.py
src/models/: __init__.py  base.py  burn_events.py  mint_events.py  swap_events.py
src/streamers/: __init__.py  kafka_consumer.py  uniswap_swap_streamer.py  uniswapv3_event_streamer.py
src/utils/: datetime_encoder.py  filesystem.py  kafka.py  logger.py  postgresql_client.py  web3.py
tests/: test_kafka_consumer.py  test_metrics.py
